Make sure the footer doesn't hide behind the map.

--- a/app/stylesheets/basics/_footer.sass
+++ b/app/stylesheets/basics/_footer.sass
@@ -6,7 +6,7 @@
   color: #ca1e2e
   line-height: 15px
   font-size: 12px
-
+  z-index: 4000
   font-family: georgia
 
   &.fixed
